--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>Description: On my FINAL SKETCH ASSIGNMENT</p>
         <br />
         <br />
-  <h1>Your Sketch1 Title</h1>
+  <h1>Mass Effect Relay</h1>
   <script type="text/processing" data-processing-target="mycanvas1">
   
   float Element_1_RotationX=90; //many variables
