--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <br />
         <br />
   <h1>The Eiffel Tower</h1>
+  <!
   <script type="text/processing" data-processing-target="mycanvas1">
+  >
   
+  <script type="text/processing" src=newten611.github.io/MAGD150-Assignments/Forslund_Lab2_AssignmentOne.pde data-processing-target="mycanvas1">
 void setup() {
   size(800, 800);
   background(10,10,20);
