--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br />
   <h1>The Eiffel Tower</h1>
   
-  <script type="text/processing" src=newten611.github.io/MAGD150-Assignments/Forslund_Lab2_AssignmentOne.pde data-processing-target="mycanvas1">
+  <script type="text/processing" src=newten611.github.io/MAGD150-Assignments/Forslund_Lab2_AssignmentOne.pde.html data-processing-target="mycanvas1">
   </script>
   <canvas id="mycanvas1"></canvas>
   <p>Description:</p>
