--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         <br />
   <h1>The Eiffel Tower</h1>
   
-  <script src="newten611.github.io/MAGD150-Assignments/Forslund_Lab2_AssignmentOne.pde" data-processing-target="mycanvas1">
-  </script>
-  <canvas id="mycanvas1"></canvas>
+  <script src="newten611.github.io/MAGD150-Assignments/processing.min.js"></script>
+  <canvas data-processing-sources="newten611.github.io/MAGD150-Assignments/Forslund_Lab2_AssignmentOne.pde"></canvas>
   <p>Description:</p>
         <br />
         <br />
