--- a/index-simple.html
+++ b/index-simple.html
@@ -11,7 +11,7 @@
   <!-- Your FINAL SKETCH goes here -->
 
   </script>
-  <canvas id="mycanvas-final"></canvas>  
+  <canvas id="mycanvas-final" data-processing-sources="/MAGD150-Assignments/Assignments/AssignmentOne.pde"></canvas>  
   <p>Description: On my FINAL SKETCH ASSIGNMENT</p>
         <br />
         <br />
@@ -34,7 +34,7 @@
   <!-- Your sketch3 goes here -->
 
   </script>	
-  <canvas id="mycanvas2"></canvas>
+  <canvas id="mycanvas2-sketch2" data-processing-sources="/MAGD150-Assignments/Assignments/AssignmentTwo.pde"></canvas>
   <p>Description:</p>
         <br />
         <br />
@@ -45,7 +45,7 @@
   <!-- Your sketch3 goes here -->
 
   </script>
-  <canvas id="mycanvas3"></canvas>
+  <canvas id="mycanvas3-sketch3" data-processing-sources="/MAGD150-Assignments/Assignments/AssignmentOne.pde"></canvas>
   <p>Description:</p>
         <br />
         <br />
@@ -56,7 +56,7 @@
   <!-- Your sketch4 goes here -->
 
   </script>
-  <canvas id="mycanvas4"></canvas>
+  <canvas id="mycanvas4-sketch4" data-processing-sources="/MAGD150-Assignments/Assignments/AssignmentOne.pde"></canvas>
   <p>Description:</p>
         <br />
         <br />
@@ -66,7 +66,7 @@
   <!-- Your sketch5 goes here -->
 
   </script>
-  <canvas id="mycanvas5"></canvas>
+  <canvas id="mycanvas5-sketch5" data-processing-sources="/MAGD150-Assignments/Assignments/AssignmentOne.pde"></canvas>
   <p>Description:</p>
   </body>
 </html>  
