--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   </header>
   <body>  
   
-  <h1>Your FINAL SKETCH Title</h1>
+  <h1>Final Assignment: The Retro Arcade</h1>
   <script type="text/processing" data-processing-target="mycanvas-final">
   
   <!-- Your FINAL SKETCH goes here -->
 
   </script>
   <canvas id="mycanvas-final" data-processing-sources="/MAGD150-Assignments/Assignments/AssignmentOne.pde"></canvas>  
-  <p>Description: On my FINAL SKETCH ASSIGNMENT</p>
+  <p>This program contains four separate areas: Pong, Asteroid, Snake and Tank Destroyer. In Pong, move the mouse to control the paddle on the left side of the screen and prevent the ball from escaping. In Asteroid, aim the ship by moving the mouse and click to fire. In Tank Destroyer, move the green tank by using the arrow keys, move the mouse to ain the gun, and press the mouse button to fire.</p>
         <br />
         <br />
 		
